Support long file name with Kindle firmware 5.16.4

--- a/login/viewer.html
+++ b/login/viewer.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>書籍ファイルビューワー</title>
   <script src="./.js/jquery-3.2.1.js"></script>
+  <script src="./.js/md5-v0.8.3.min.js"></script>
   <script src="./.js/moment.js"></script>
   <script src="./.js/viewer.js"></script>
   <link rel="stylesheet" href="./.js/style.css">
